// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FacebookPreview matches the snapshot for a faulty image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
]
`;

exports[`FacebookPreview matches the snapshot for a landscape image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yosat.com
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
]
`;

exports[`FacebookPreview matches the snapshot for a portrait image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
]
`;

exports[`FacebookPreview matches the snapshot for a square image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
]
`;

exports[`FacebookPreview matches the snapshot for a too small image 1`] = `
Array [
  .c0 {
  height: 261px;
  width: 500px;
  background-color: #ddd;
}

<div
    className="c0"
  />,
  .c0 {
  color: #606770;
  font-size: 12px;
  line-height: 11px;
  text-transform: uppercase;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<p
    className="c0"
  >
    yoast.com
  </p>,
  .c0 {
  display: block;
  color: #1d2129;
  font-weight: 600;
  overflow: hidden;
  font-size: 16px;
  line-height: 20px;
  margin: 5px 0 0;
  max-height: 100px;
  word-wrap: break-word;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  white-space: normal;
  cursor: pointer;
}

<span
    className="c0"
  >
    YoastCon Workshops
  </span>,
]
`;
